--- a/CareerExplorer.Web/Views/Vacancy/GetAll.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/GetAll.cshtml
@@ -44,7 +44,7 @@
             @if (Model.HasPreviousPage)
             {
                 <li class="page-item">
-                    <a asp-action="GetAll" asp-route-pageNumber="@Model.PageIndex - 1" class="page-link">&laquo;</a>
+                    <a class="page-link navig-link" data-page-number=@(Model.PageIndex - 1)>&laquo;</a>
                 </li>
             }
             else
@@ -64,14 +64,14 @@
                 else
                 {
                     <li class="page-item">
-                        <a class="page-link" href="@Url.Action("GetAll", new { pageNumber = i })">@i</a>
+                        <a data-page-number=@i class="page-link navig-link">@i</a>
                     </li>
                 }
             }
             @if (Model.HasNextPage)
             {
                 <li class="page-item">
-                    <a class="page-link" href="@Url.Action("GetAll", new { pageNumber = Model.PageIndex + 1 })">&raquo;</a>
+                    <a class="page-link navig-link" data-page-number=@(Model.PageIndex + 1)>&raquo;</a>
                 </li>
             }
             else
@@ -90,11 +90,18 @@
         width: 100%;
         padding: 3%;
     }
+    .btn-custom {
+        background-color: #343a40;
+    }
+
+    .btn-custom span {
+        margin-left: 5px;
+        color: #fff;
+    }
 </style>
 @section Scripts {
     <script>
         const expandBtns = document.querySelectorAll('.expand-btn');
-
         expandBtns.forEach(btn => {
             btn.addEventListener('click', () => {
                 btn.previousElementSibling.classList.toggle('expanded');
@@ -103,8 +110,6 @@
         });
         //filtering
         function setCookie(name, value, days) {
-            //const expires = new Date();
-            //expires.setTime(expires.getTime() + days * 24 * 60 * 60 * 1000);
             document.cookie = `${name}=${value};expires="";path=/`;
         };
 
@@ -122,11 +127,9 @@
         console.log(savedTagIds);
         const selectedTagIds = new Set();
         if (savedTagIds) {
-            // Parse the saved tag IDs string and add them to the selectedTagIds set
             savedTagIds.split(',').forEach(id => selectedTagIds.add(parseInt(id)));
         }
 
-        // Update the URL with the selected tag IDs and navigate to it
         function updateUrlAndNavigate() {
             const pageNumber = @Model.PageIndex;
             const tagIds = Array.from(selectedTagIds);
@@ -134,15 +137,11 @@
             const url = `@Url.Action("GetAll")?pageNumber=${pageNumber}&tagIds=${tagIds.join(',')}`;
             window.location.href = url;
         }
-
-        // Save the selected tag IDs in a cookie whenever they change
         function saveSelectedTagIdsInCookie() {
             const tagIdsString = Array.from(selectedTagIds).join(',');
             setCookie('selectedTagIds', tagIdsString, 365);
         }
         const tagBtns = document.querySelectorAll('.tag-btn');
-        //const selectedTagIds = new Set();
-        // Add click event listeners to tag buttons
         tagBtns.forEach(btn => {
             console.log(selectedTagIds.has(parseInt(btn.dataset.tagId)))
             if (!selectedTagIds.has(parseInt(btn.dataset.tagId))) {
@@ -150,71 +149,35 @@
                 btn.classList.toggle('btn-primary');
                 btn.classList.toggle('btn-secondary');
 
-                // Add or remove tag ID from the set of selected tag IDs
                 const tagId = parseInt(btn.dataset.tagId);
                 
-                console.log(tagId, "tagId");
                 selectedTagIds.add(tagId);
-                //console.log(selectedTagIds, "selectedTagIds");
 
-                //if (selectedTagIds.has(tagId)) {
-                //    selectedTagIds.delete(tagId);
-                //} else {
-                //    selectedTagIds.add(tagId);
-                //}
-                console.log(selectedTagIds, "selectedTagIds")
-
-                // Update the URL and save the selected tag IDs in a cookie
                 updateUrlAndNavigate();
                 saveSelectedTagIdsInCookie();
                 });
             } else {
-                btn.innerHTML += '&times;';
+                btn.innerHTML += '<span>&times;</span>';
                 btn.setAttribute("class", "btn btn-custom");
+                btn.addEventListener('click', () => {
+                    const tagId = parseInt(btn.dataset.tagId);
+                    selectedTagIds.delete(tagId);
+                    updateUrlAndNavigate();
+                    saveSelectedTagIdsInCookie();
+                });
             }
         });
+        const navigationElements = document.querySelectorAll(".navig-link");
 
-
-        // Add click event listeners to tag buttons
-        //tagBtns.forEach(btn => {
-        //    btn.addEventListener('click', () => {
-        //        btn.classList.toggle('btn-primary');
-        //        btn.classList.toggle('btn-secondary');
-
-        //        // Add or remove tag ID from the set of selected tag IDs
-        //        const tagId = parseInt(btn.dataset.tagId);
-        //        console.log(btn.dataset.tagId);
-        //        if (selectedTagIds.has(tagId)) {
-        //            selectedTagIds.delete(tagId);
-        //        } else {
-        //            selectedTagIds.add(tagId);
-        //        }
-        //        const pageNumber = @Model.PageIndex;
-        //        const tagIds = Array.from(selectedTagIds);
-        //        const url = `@Url.Action("GetAll")?pageNumber=${pageNumber}&tagIds=${tagIds.join(',')}`;
-        //        window.location.href = url;
-
-        //    });
-        //});
-
+        navigationElements.forEach(link => {
+                link.addEventListener('click', () => {
+                    const pageNumber = parseInt(link.dataset.pageNumber);
+                    const tagIds = Array.from(selectedTagIds);
+                    const url = `@Url.Action("GetAll")?pageNumber=${pageNumber}&tagIds=${tagIds.join(',')}`;
+                    window.location.href = url;
+                });
+        });
         
-        //const applyFilterBtn = document.getElementById('apply-filter-btn');
-        //applyFilterBtn.addEventListener('click', () => {
-        //    const pageSize = ;
-        //    const tagIds = Array.from(selectedTagIds);
-
-        //    const url = `@Url.Action("GetAll")?pageSize=${pageSize}&tagIds=${tagIds.join(',')}`;
-        //    window.location.href = url;
-        //});
-
-        //const initialSelectedTagIds = ;
-        //initialSelectedTagIds.forEach(tagId => {
-        //    const btn = document.querySelector(`.tag-btn[data-tag-id="${tagId}"]`);
-        //    if (btn) {
-        //        btn.classList.add('btn-primary');
-        //        selectedTagIds.add(tagId);
-        //    }
-        //});
     </script>
 }
 
