--- a/CareerExplorer.Web/Views/Admin/GetPositions.cshtml
+++ b/CareerExplorer.Web/Views/Admin/GetPositions.cshtml
@@ -23,8 +23,8 @@
                         <th>@tag.Name</th>
                         <th>
                             <div class="w-50 btn-group" role="group">
-                                <a asp-controller="Admin" asp-action="EditPosition" asp-route-id="@tag.Id" class="btn btn-primary me-3">@Localizer["Name"]</a>
-                                <a asp-controller="Admin" asp-action="DeletePosition" asp-route-id="@tag.Id" class="btn btn-primary me-3">@Localizer["Name"]</a>
+                                <a asp-controller="Admin" asp-action="EditPosition" asp-route-id="@tag.Id" class="btn btn-primary me-3">@Localizer["Edit"]</a>
+                                <a asp-controller="Admin" asp-action="DeletePosition" asp-route-id="@tag.Id" class="btn btn-primary me-3">@Localizer["Delete"]</a>
                             </div>
                         </th>
                     </tr>
