--- a/CareerExplorer.Web/Views/Vacancy/GetVacancy.cshtml
+++ b/CareerExplorer.Web/Views/Vacancy/GetVacancy.cshtml
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-md-8">
 
-            <h1>@Model.Title</h1>
+            <h1>@Model.Position.Name</h1>
             <span></span>
             <p>@Model.Description</p>
             <span>Published: @Model.CreatedDate.ToShortDateString()</span>
