--- a/CareerExplorer.Web/Views/Shared/_AdminMenuPartial.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_AdminMenuPartial.cshtml
@@ -4,4 +4,5 @@
 <div class="list-group">
     <a asp-controller="Admin" asp-action="GetSkillsTags" type="button" class="btn btn-primary">@Localizer["Skill Tags"]</a>
     <a asp-controller="Admin" asp-action="GetPositions" type="button" class="btn btn-primary">@Localizer["Positions"]</a>
+    <a asp-controller="Admin" asp-action="GetVacanciesToAccept" type="button" class="btn btn-primary">Vacancies</a>
 </div>
