--- a/CareerExplorer.Web/Views/Shared/_AdminMenuPartial.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_AdminMenuPartial.cshtml
@@ -5,4 +5,5 @@
     <a asp-controller="Admin" asp-action="GetSkillsTags" type="button" class="btn btn-primary">@Localizer["Skill Tags"]</a>
     <a asp-controller="Admin" asp-action="GetPositions" type="button" class="btn btn-primary">@Localizer["Positions"]</a>
     <a asp-controller="Admin" asp-action="GetVacanciesToAccept" type="button" class="btn btn-primary">Vacancies</a>
+    <a asp-controller="Admin" asp-action="GetRecruitersToAccept" type="button" class="btn btn-primary">Recruiters</a>
 </div>
