--- a/CareerExplorer.Web/Views/Shared/_Layout.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/CareerExplorer.Web.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/bootswatch.css" />
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.1/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
