accept jobseeker profile

--- a/CareerExplorer.Web/Views/Shared/_LoginPartial.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_LoginPartial.cshtml
@@ -45,6 +45,7 @@
                     <a class="dropdown-item" asp-controller="Admin" asp-action="GetPositions">@Localizer["Positions"]</a>
                     <a class="dropdown-item" asp-controller="Admin" asp-action="GetVacanciesToAccept">Vacancies</a>
                     <a class="dropdown-item" asp-controller="Admin" asp-action="GetRecruitersToAccept">Recruiters</a>
+                    <a class="dropdown-item" asp-controller="Admin" asp-action="GetJobSeekersToAccept">JobSeekers</a>
                     <div class="dropdown-divider"></div>
                     <form class="dropdown-item" id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("GetAll", "Vacancy", new { area = "" })">
                         <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">@Localizer["Logout"]</button>
