--- a/CareerExplorer.Web/Views/Shared/_Layout.cshtml
+++ b/CareerExplorer.Web/Views/Shared/_Layout.cshtml
@@ -25,8 +25,12 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Vacancy" asp-action="GetAll">@Localizer["Vacancies"]</a>
+                            <a class="nav-link" asp-area="" asp-controller="Vacancy" asp-action="GetAll">@Localizer["Vacancies"]</a>               
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Chat" asp-action="GetChat">Chat</a>
+                        </li>
+                        
                     </ul>
                     <partial name="_LoginPartial" />
                     <partial name="_LanguagesPartial"/>
